--- a/vflix/src/app/home/home.component.html
+++ b/vflix/src/app/home/home.component.html
@@ -1,5 +1,5 @@
- <!-- ********************* MOVIES ********************* -->
-
+<header> <app-navbar></app-navbar> </header>
+ 
  <section id="movies">
 
     <div class="movies-section">
@@ -45,3 +45,5 @@
     <span class="clearfix"></span>
 
   </section>
+
+  <app-footer></app-footer>
