--- a/vflix/src/app/movie-details/movie-details.component.html
+++ b/vflix/src/app/movie-details/movie-details.component.html
@@ -1,5 +1,6 @@
+<header> <app-navbar></app-navbar> </header>
 
-<div class="movie fade-in">
+<div class="movie fade-in text-center">
 
     <img src="{{movie.poster}}" />
 
@@ -14,3 +15,5 @@
         </button>
     </div>
 </div>
+
+<app-footer></app-footer>
