--- a/vflix/src/app/navbar/navbar.component.html
+++ b/vflix/src/app/navbar/navbar.component.html
@@ -9,10 +9,10 @@
         <a routerLink="/" class="navbar-brand"> VintageFlix </a>
       </div>
 
-      <div class="collapse navbar-collapse navbar-margin" id="portfolioNav">
+      <div class="collapse navbar-collapse navbar-margin" id="vflixNav">
         <ul class="nav navbar-nav navbar-right">
-          <li> <a routerLink="/" > <i class="fas fa-home"></i> <span id="nav-home"> HOME</span> </a></li>
-          <li><a href="#projects"> <i class="fas fa-file-code"></i> <span id="projects-link" > PROJECTS</span> </a></li>
+          <li> <a routerLink="/" > <i class="fas fa-home"></i> <span id="nav-home"> {{home}}</span> </a></li>
+          <li><a href="#projects"> <i class="fas fa-envelope-open-text"></i> <span id="projects-link" > {{contact}}</span> </a></li>
         </ul>
       </div>
     </div>
