--- a/vflix/src/app/footer/footer.component.html
+++ b/vflix/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-    <p style="margin-top: 1.5rem;" > &copy; VintageFlix </p>
+    <p style="margin-top: 1.5rem;" > VintageFlix &copy; (2019)</p>
   </footer>
