--- a/vflix/src/app/home/home.component.html
+++ b/vflix/src/app/home/home.component.html
@@ -8,7 +8,7 @@
       <div class="row"> 
 
         <div class="col-sm-1"> 
-          <h4 id="movies-lbl">Movies</h4>
+          <h4 id="movies-lbl">{{lblMovies}}</h4>
         </div>
         <div class="col-sm-4">
           <select name="categories" id="category" (change)='onCategorySelected($event)'>
@@ -17,7 +17,7 @@
         </div>
         <div class="col-sm-4">
         <div class="search">
-          <span> <input type="text" placeholder="Buscar.." > 
+          <span> <input type="text" placeholder="{{lblSearch}}" > 
             <button><i class="fas fa-search-plus"></i></button> 
           </span>
         </div>  
@@ -26,7 +26,6 @@
       </div>
 
       <div class="movies-container">
-
         <div *ngFor="let movie of movies;" class="movie zoom-in">
           <a routerLink="/movie-details/{{movie.id}}">
             <img src="{{movie.poster}}"/>
