--- a/vflix/src/app/navbar/navbar.component.css
+++ b/vflix/src/app/navbar/navbar.component.css
@@ -17,7 +17,7 @@ nav{
     font-style: bold !important;
     text-transform: uppercase !important;
     transition: 1s ease;
-    margin-top: 1vmin !important;
+    margin-top: 5px !important;
     border: none !important;
   }
 
