--- a/vflix/src/styles.css
+++ b/vflix/src/styles.css
@@ -26,7 +26,7 @@
     height: 100% !important; width: 100% !important;
     font-family: 'Quicksand', sans-serif !important;
     color: var(--font-color) !important;
-    background: var(--background-color) fixed !important;
+    background: var(--background-color) !important;
     padding-top: 8vmin !important;
   }
 
