--- a/vflix/src/styles.css
+++ b/vflix/src/styles.css
@@ -50,7 +50,9 @@ button {
   border-radius: 10px !important;
   text-decoration: none !important;
   text-transform: uppercase !important;
-  background: #f2f2f2c7 !important;
+  background: var(--font-color-logo) !important;
+  color: #333333 !important;
+  border: 1px azure solid !important;
   padding: 2vmin !important;
   padding-right: 5vmin !important;
   padding-left: 5vmin !important;
