Fixed Add Movie

--- a/vflix/src/app/admin/admin.component.html
+++ b/vflix/src/app/admin/admin.component.html
@@ -70,6 +70,12 @@
           
           <div class="row text-center" >
             <div class="col-sm-12 text-center">
+                <input type="text" [(ngModel)]="ranking" class="form-control input" placeholder="Ranking" >
+            </div>
+          </div>
+          
+          <div class="row text-center" >
+            <div class="col-sm-12 text-center">
                 <input type="text" [(ngModel)]="video" class="form-control input" placeholder="Video Url" >
             </div>
           </div>
