--- a/vflix/src/app/navbar/navbar.component.html
+++ b/vflix/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#portfolioNav">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#vflixNav">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -12,8 +12,11 @@
       <div class="collapse navbar-collapse navbar-margin" id="vflixNav">
         <ul class="nav navbar-nav navbar-right">
           <li> <a routerLink="/" > <i class="fas fa-home"></i> <span id="nav-home"> {{home}}</span> </a></li>
+          <!--
           <li><a routerLink="/contact" > <i class="fas fa-envelope-open-text"></i> <span id="projects-link" > {{contact}}</span> </a></li>
+        -->
         </ul>
       </div>
+      
     </div>
   </nav>
