--- a/vflix/src/app/home/home.component.html
+++ b/vflix/src/app/home/home.component.html
@@ -31,6 +31,13 @@
           <a routerLink="/movie-details/{{movie.id}}">
             <img src="{{movie.poster}}"/>
             <div class="movieDetails">
+              <div id="rating" > 
+                <span class="fa fa-star" [ngClass]="{'checked' : movie.ranking*0.4 > 0 } "></span>
+                <span class="fa fa-star" [ngClass]="{'checked' : movie.ranking*0.4 > 1 } "></span>
+                <span class="fa fa-star" [ngClass]="{'checked' : movie.ranking*0.4 > 2 } "></span>
+                <span class="fa fa-star" [ngClass]="{'checked' : movie.ranking*0.4 > 3 } "></span>
+                <span class="fa fa-star" [ngClass]="{'checked' : movie.ranking*0.4 > 4 } "></span>
+              </div>
               <p>{{movie.name}}</p>
               <h5>{{movie.lenght}}</h5>
             </div>
