--- a/vflix/src/app/navbar/navbar.component.html
+++ b/vflix/src/app/navbar/navbar.component.html
@@ -12,9 +12,7 @@
       <div class="collapse navbar-collapse navbar-margin" id="vflixNav">
         <ul class="nav navbar-nav navbar-right">
           <li> <a routerLink="/" > <i class="fas fa-home"></i> <span id="nav-home"> {{home}}</span> </a></li>
-          <!--
-          <li><a routerLink="/contact" > <i class="fas fa-envelope-open-text"></i> <span id="projects-link" > {{contact}}</span> </a></li>
-        -->
+          <li><a routerLink="/bestRanked" > <i class="fas fa-envelope-open-text"></i> <span id="projects-link" >{{bestRanked}}</span> </a></li>
         </ul>
       </div>
       
