--- a/vflix/src/styles.css
+++ b/vflix/src/styles.css
@@ -63,7 +63,7 @@ button:hover, button:active, button:focus {
   transform: scale(1.2) !important;
 }
 
-input[type=text], input[type=password], input[type=email], textarea {
+input[type=text], input[type=password], input[type=email],input[type=number], textarea {
   text-align: center !important;
   font-size: 14px !important;
   color: var(--font-color-logo) !important;
@@ -76,6 +76,7 @@ input[type=text], input[type=password], input[type=email], textarea {
 input[type=text]:focus, input[type=text]:active, 
 input[type=password]:focus,input[type=password]:active, 
 input[type=email]:focus, input[type=email]:active, 
+input[type=number]:focus, input[type=number]:active,
 textarea:active, textarea:focus {
   border: 1px var(#818863) solid !important;
 }
@@ -127,6 +128,4 @@ select:active, select:hover,select:focus, option:checked {
 .showOnMobile{ display: none !important; }
 
 @media screen and (max-width: 800px) {
-  .hideOnMobile{ display: none !important; }
-  .showOnMobile{ display: visible !important; }
 }
