--- a/vflix/src/app/navbar/navbar.component.css
+++ b/vflix/src/app/navbar/navbar.component.css
@@ -36,6 +36,23 @@ nav{
   }
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 768px) {
+  #ham{
+    background: var(--background-color) !important;  
+    color: var(--font-color) !important;
+    border: 2px solid var(--font-color-logo) !important;
+    padding: 2vmin 4vmin 2vmin 4vmin !important;
+    margin: 3px !important;
+    font-size: 1.8rem !important;
+    box-shadow: 0 4px 8px 0 #333333, 0 2px 10px 0 #333333 !important;
+  }
+
+  #ham:hover, #ham:active, #ham:focus {
+    transform: scale(1) !important;
+    color: var(--font-color-logo) !important;
+  }
+
+  .navbar-header { margin: auto !important;  }
+  
   
 }
