--- a/vflix/src/app/navbar/navbar.component.html
+++ b/vflix/src/app/navbar/navbar.component.html
@@ -1,10 +1,8 @@
 <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#vflixNav">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+        <button id="ham" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#vflixNav">
+          <i class="fas fa-bars"></i>
         </button>
         <a routerLink="/" class="navbar-brand"> VintageFlix </a>
       </div>
@@ -12,9 +10,9 @@
       <div class="collapse navbar-collapse navbar-margin" id="vflixNav">
         <ul class="nav navbar-nav navbar-right">
           <li> <a routerLink="/" > <i class="fas fa-home"></i> <span id="nav-home"> {{home}}</span> </a></li>
-          <li><a routerLink="/bestRanked" > <i class="fas fa-envelope-open-text"></i> <span id="projects-link" >{{bestRanked}}</span> </a></li>
+          <li><a routerLink="/bestRanked" > <i class="fas fa-star"></i> <span id="projects-link" > {{bestRanked}}</span> </a></li>
         </ul>
       </div>
-      
+
     </div>
   </nav>
