--- a/vflix/src/app/home/home.component.css
+++ b/vflix/src/app/home/home.component.css
@@ -78,7 +78,7 @@
 input{
   width: 90% !important;
   color: #f2f2f2 !important;
-  border: 0.5px solid #b3b0b0 !important; 
+  border: 1px solid #d6d5d5 !important; 
 }
 
 .search button{
