--- a/vflix/src/app/play-movie/play-movie.component.html
+++ b/vflix/src/app/play-movie/play-movie.component.html
@@ -1,32 +1,16 @@
 
-<div class="container-fluid">
-  <div *ngIf="loaded" class="video-player">
+<div *ngIf="movie" id="playerContainer" class="container-fluid">
+  <div class="video-player">
   <a class="back" routerLink="/" > <i class="fas fa-arrow-left"></i> </a>
-  
-  <video class="player" id="moviePlayer" width="640" height="480"
-  controls autoplay poster="{{movie.poster}}" preload="auto" >
+  <video *ngIf="movie" id="moviePlayer" class="player"
+    width="640" height="640"
+    controls  autoplay
+    poster="{{movie.poster}}" preload="auto" >
     <source src="{{movie.videoUrl}}" type="video/mp4">
-  Your browser does not support the video tag.
+    Your browser does not support the video tag.
   </video>
 
 </div>
 
 </div>
-
-<!--
-
-<script>
-
-$(document).on('click', '#moviePlayer', function (e) {
-    var video = $(this).get(0);
-    if (video.paused === false) {
-        video.pause();
-    } else {
-        video.play();
-    }
-    return false;
-});
-
-</script>
--->
 
