--- a/vflix/src/app/admin/admin.component.css
+++ b/vflix/src/app/admin/admin.component.css
@@ -8,5 +8,7 @@
     margin-left: 20% !important;
     width: 60% !important;
     margin-top: 3% !important;
-    border: 1px solid aliceblue;
+    border-radius: 50px !important;
+    background: linear-gradient(145deg, #161515, #1a1919) !important;
+    box-shadow:  20px 20px 60px #141414, -20px -20px 60px #1c1a1a !important;
   }
