--- a/vflix/src/app/admin/admin.component.html
+++ b/vflix/src/app/admin/admin.component.html
@@ -62,12 +62,20 @@
             <div class="col-sm-12 text-center">
                 <input type="text" [(ngModel)]="poster" class="form-control input" placeholder="Poster" >
             </div>
-            
+          </div>
+          
+          <div class="row text-center" >
+            <div class="col-sm-12 text-center">
+                <input type="text" [(ngModel)]="banner" class="form-control input" placeholder="Banner" >
+            </div>
           </div>
       
           <div class="row text-center" >
-            <div class="col-sm-6 text-center">
-              <input type="text" [(ngModel)]="time" class="form-control input" placeholder="Time" >
+            <div class="col-sm-3 text-center">
+              <input type="number" [(ngModel)]="time" class="form-control input" placeholder="Hours" >
+            </div>
+            <div class="col-sm-3 text-center">
+              <input type="number" [(ngModel)]="time" class="form-control input" placeholder="Minutes" >
             </div>
             <div class="col-sm-6 text-center">
                 <input type="number" [(ngModel)]="ranking" class="form-control input" placeholder="Ranking" >
