--- a/vflix/src/app/home/home.component.html
+++ b/vflix/src/app/home/home.component.html
@@ -1,13 +1,12 @@
 <header> <app-navbar></app-navbar> </header>
  
  <section id="movies">
-
+  
+  <app-slider *ngIf="!filtered"> </app-slider>
+      
     <div class="movies-section">
-      <br>
-
-      <div class="row"> 
-
-        <div class="col-sm-1"> 
+      <div class="row" style="margin-left: 5% !important;">
+        <div class="col-sm-1">
           <h4 id="movies-lbl">{{lblMovies}}</h4>
         </div>
         <div class="col-sm-4">
@@ -18,16 +17,15 @@
         <div class="col-sm-4">
         <div class="search">
           <span> <input type="text" placeholder="{{lblSearch}}" > 
-            <button><i class="fas fa-search-plus"></i></button> 
+            <button><i class="fas fa-search-plus"></i></button>
           </span>
         </div>
       </div>
       </div>
-      <br>
       
       <div class="movies-container">
         <div *ngFor="let movie of movies;" class="movie zoom-in">
-          <a routerLink="/movie-details/{{movie.id}}">
+          <a routerLink="/movie-details/{{movie.name}}">
             <img src="{{movie.poster}}"/>
             <div class="movieDetails">
               <div id="rating" > 
