--- a/vflix/src/styles.css
+++ b/vflix/src/styles.css
@@ -48,13 +48,14 @@ button {
   border-radius: 10px !important;
   text-decoration: none !important;
   text-transform: uppercase !important;
-  background: var(--font-color-logo) !important;
-  color: #333333 !important;
-  border: 1px azure solid !important;
+  color: var(--font-color-logo) !important;
   padding: 2vmin !important;
   padding-right: 5vmin !important;
   padding-left: 5vmin !important;
   box-shadow: 0 4px 8px 0 var(--shadow), 0 2px 10px 0 var(--shadow) !important;
+  border-radius: 50px;
+  background: linear-gradient(145deg, #161515, #1a1919);
+  box-shadow:  20px 20px 60px #141414, -20px -20px 60px #1c1a1a;
 }
 
 button:hover, button:active, button:focus {
@@ -65,10 +66,12 @@ input[type=text], input[type=password], input[type=email],input[type=number], te
   text-align: center !important;
   font-size: 14px !important;
   color: var(--font-color-logo) !important;
-  border: 1px var(--font-color-logo) solid !important;
+  border: 1px #494848 solid !important;
   background-color: transparent !important;
-  border-radius: 2px;
   padding: 0.8vmin;
+  border-radius: 50px !important;
+  background: #181717 !important;
+  box-shadow: inset 20px 20px 60px #141414, inset -20px -20px 60px #1c1a1a !important;
 }
 
 input[type=text]:focus, input[type=text]:active,
@@ -100,6 +103,7 @@ select:active, select:hover,select:focus, option:checked {
   outline: none !important;
 }
 
+
 /** ANIMATIONS **/
 .zoom-in { animation: zoom 1s ease !important; overflow: hidden !important; }
 .fade-in { animation: fadein 2s ease !important; overflow: hidden !important; }
@@ -119,6 +123,14 @@ select:active, select:hover,select:focus, option:checked {
   50%{ transform: translateY(10%); }
   100%{ transform: translateY(0%); }
 }
+
+.fa-star{
+  font-size: smaller !important;
+  text-shadow: 1px 1px 1px #242A26, 2px 2px 3px #242A26 !important;
+  color: #f2f2f2 !important;
+}
+
+.checked{ color: var(--font-color-logo) !important; }
 
 .clearfix{ float: none !important; clear: both !important; }
 
