--- a/vflix/src/app/admin/admin.component.html
+++ b/vflix/src/app/admin/admin.component.html
@@ -72,10 +72,10 @@
       
           <div class="row text-center" >
             <div class="col-sm-3 text-center">
-              <input type="number" [(ngModel)]="time" class="form-control input" placeholder="Hours" >
+              <input type="number" [(ngModel)]="hours" class="form-control input" placeholder="Hours" >
             </div>
             <div class="col-sm-3 text-center">
-              <input type="number" [(ngModel)]="time" class="form-control input" placeholder="Minutes" >
+              <input type="number" [(ngModel)]="minutes" class="form-control input" placeholder="Minutes" >
             </div>
             <div class="col-sm-6 text-center">
                 <input type="number" [(ngModel)]="ranking" class="form-control input" placeholder="Ranking" >
