--- a/vflix/src/app/shared/slider/slider.component.css
+++ b/vflix/src/app/shared/slider/slider.component.css
@@ -1,5 +1,37 @@
 
 .slider{ 
+	margin-top: 12vmin !important;
+  	width:95% !important; overflow:hidden; text-align:center; margin: 0 auto; float: center;  
+  	padding :0; margin: auto !important;
+  	margin-bottom: 2vmin !important;
+	border-radius: 5px !important;
+	height: 60vmin !important; 
+}
+
+.slider img{ width: 100% !important; height: 100%; }
+
+.caption{
+	transform: translateY(-25vmin) !important;
+	padding: 2vmin !important;
+}
+
+.slider h2{
+	text-transform: uppercase;
+	color: honeydew !important;
+	text-shadow: 1px 1px 1px #212422, 2px 2px 3px #212422 !important;
+}
+
+.fa-star{
+	font-size: x-large !important;
+	text-shadow: 2px 2px 2px #242A26, 3px 3px 4px #242A26 !important;
+  }
+
+@keyframes fadein {
+  0%{ opacity: 0; } 100%{ opacity: 1; }
+}
+
+/*
+.slider{ 
 	margin-top: 6vmin !important;
   	width:100%; overflow:hidden; text-align:center; margin: 0 auto; float: center;  
   	padding :0;
@@ -7,7 +39,7 @@
   	border-radius: 3px !important;
 }
 
-.slider ul{ padding:0; display:flex; width:400%; animation: slide 30s infinite alternate;  }
+.slider ul{ padding:0; display:flex; width:700%; animation: slide 30s infinite alternate;  }
 .slider li{ width:100%; list-style-type: none; height: 60vmin !important; }
 .slider img{ width:100%; height:100%; }
 
@@ -29,11 +61,26 @@
  
 @keyframes slide {
 	0% { margin-left: 0; }
-	20% { margin-left: 0; }
+	10% { margin-left: 0; }
+
+	15% { margin-left: -100%; }
 	25% { margin-left: -100%; }
-	45% { margin-left: -100%; }
-	50% { margin-left: -200%; }
-	70% { margin-left: -200%; }
-	75% { margin-left: -300%; }
-	100% { margin-left: -300%; }
+	
+	30% { margin-left: -200%; }
+	40% { margin-left: -200%; }
+	
+	45% { margin-left: -300%; }
+	55% { margin-left: -300%; }
+
+	60% { margin-left: -400%; }
+	70% { margin-left: -400%; }
+
+	75% { margin-left: -500%; }
+	85% { margin-left: -500%; }
+
+	90% { margin-left: -600%; }
+	100% { margin-left: -600%; }
+
 }
+
+*/
