--- a/vflix/src/app/shared/slider/slider.component.html
+++ b/vflix/src/app/shared/slider/slider.component.html
@@ -1,25 +1,23 @@
 
-<script type="text/javascript" >
-
+<script>
+    $(document).ready(function(){ 
+        alert("asasdasd");
+    });    
 </script>
 
-    <div *ngIf="movies && movies.length>0" id="slider" class="slider fade-in" >
-        <ul>
-         <li *ngFor="let movie of movies;" > 
-             <a (click)="OnMovieselected(movie.id)" >
-                <img *ngIf="movie.banner" src="{{movie.banner}}"/>
-                <img *ngIf="!movie.banner" src="{{movie.poster}}"/>
-                <div class="caption"> 
-                    <h2> {{movie.name}} </h2>
-                    <div id="rating" >
-                        <span class="fa fa-star" [ngClass]="{'checked' : movie.ranking*0.5 > 0 } "></span>
-                        <span class="fa fa-star" [ngClass]="{'checked' : movie.ranking*0.5 > 1 } "></span>
-                        <span class="fa fa-star" [ngClass]="{'checked' : movie.ranking*0.5 > 2 } "></span>
-                        <span class="fa fa-star" [ngClass]="{'checked' : movie.ranking*0.5 > 3 } "></span>
-                        <span class="fa fa-star" [ngClass]="{'checked' : movie.ranking*0.5 > 4 } "></span>
-                      </div>
-                </div>
-            </a>
-          </li>
-        </ul>
-    </div>
+<div *ngIf="curMovie" id="slider" class="slider" >
+        <a (click)="OnMovieselected(curMovie.id)" >
+            <img *ngIf="curMovie.banner" src="{{curMovie.banner}}" />
+            <img *ngIf="!curMovie.banner" src="{{curMovie.poster}}" />
+            <div class="caption"> 
+                <h2> {{curMovie.name}} </h2>
+                <div id="rating" >
+                    <span class="fa fa-star" [ngClass]="{'checked' : curMovie.ranking*0.5 > 0 } "></span>
+                    <span class="fa fa-star" [ngClass]="{'checked' : curMovie.ranking*0.5 > 1 } "></span>
+                    <span class="fa fa-star" [ngClass]="{'checked' : curMovie.ranking*0.5 > 2 } "></span>
+                    <span class="fa fa-star" [ngClass]="{'checked' : curMovie.ranking*0.5 > 3 } "></span>
+                    <span class="fa fa-star" [ngClass]="{'checked' : curMovie.ranking*0.5 > 4 } "></span>
+                  </div>
+            </div>
+        </a>
+</div>
